--- a/calculator.css
+++ b/calculator.css
@@ -1,41 +1,55 @@
-.calculator {
+.Calculator {
 	font-family: 'Roboto', sans-serif;
-	font-size: 16px;
+	font-size: 36px;
 	font-weight: 700;
+	border-collapse: collapse;
 }
+
 td {
 	width: 96px;
 	padding: 26px 0;
 	text-align: center;
 }
-.calculator_output {
+
+.Calculator__output {
 	background-color: black;
 	color: white;
-	border-radius: 9px 9px 0 0;
-	text-align: right: 32px;
+	border-radius: 12px 12px 0 0;
+	text-align: right;
+	padding-right: 32px;
 	cursor: default;
 }
-.calculator_fan {
+
+.Calculator__fun {
 	background-color: #ff9900;
 	color: black;
 	cursor: pointer;
 	transition: opacity ease .25s;
 }
-.calculator_fun:hover {
+
+.Calculator__fun:hover {
 	opacity: .75;
 }
-.calculator_numb {
+
+.Calculator__numb {
 	background-color: #bbbbbb;
-	color: white;
+	color: black;
 	cursor: pointer;
-	transition: opacity ease
+	transition: opacity ease .25s;
 }
-.calculator_fun:hover {
+
+.Calculator__numb:hover {
 	opacity: .75;
 }
-.calculator_enter {
+
+.Calculator__enter {
 	background-color: #f1f1f1;
 	color: black;
-	border-radius: 0 0 12px 12px;`
+	border-radius: 0 0 12px 12px;
 	cursor: pointer;
+	transition: opacity ease .25s;
+}
+
+.Calculator__enter:hover {
+	opacity: .75;
 }
